# boat

./: .gitignore  .hlint.yaml  LICENSE  add.s  boatc  cabal.project  cabal.project.local  flake.nix  oat.cabal  oatc  shell.nix
boat-core/: .ghci  boat-core.cabal
boat-core/app/: Main.hs
boat-core/bench/: Main.hs
boat-core/src/: Boat.hs
boat-core/src/Boat/: Cli.hs  Command.hs  Dataflow.hs  Diagnostic.hs  Driver.hs  Error.hs  Frontend.hs  Interned.hs  LL.hs  Main.hs  Reporter.hs  RunReporter.hs  TH.hs  Token.hs
boat-core/src/Boat/Backend/: Frame.hs
boat-core/src/Boat/Backend/Asm/: AST.hs
boat-core/src/Boat/Backend/X86/: Codegen.hs  Frame.hs  Munch.hs  Pretty.hs  RegAlloc.hs  X86.hs
boat-core/src/Boat/Dataflow/: Block.hs  Combinators.hs  FactGraph.hs  Fuel.hs  Graph.hs  Label.hs  LabelMap.hs  LabelSet.hs  Node.hs  Pointed.hs  Run.hs  Shape.hs  TreeUtils.hs  Utils.hs
boat-core/src/Boat/Interned/: Internal.hs  ShortByteString.hs  Text.hs
boat-core/src/Boat/LL/: Ast.hs  AstToIr.hs  Check.hs  Combine.hs  Ir.hs  IrToAst.hs  Lexer.x  LexerWrapper.hs  LowerGep.hs  Name.hs  Parser.y  ParserWrapper.hs  Pass.hs  Token.hs
boat-core/src/Boat/LL/Pass/: ConstProp.hs  Dom.hs  Live.hs  Manager.hs
boat-core/src/Boat/LL/Token/: Kind.hs
boat-core/src/Boat/Token/: Kind.hs
boat-core/src/Boat/Utils/: CallStack.hs  Families.hs  IO.hs  Impossible.hs  Misc.hs  Monad.hs  OnLeft.hs  Optics.hs  Pretty.hs  Source.hs
boat-core/src/Boat/Wrappers/: Lexer.hs
boat-core/src/Data/: Acc.hs  IdMap.hs  IdSet.hs  Infinite.hs  MapList.hs  NeAcc.hs  NodeMap.hs  Pair.hs  Pos.hs  Range.hs  Span.hs  Strict.hs
boat-core/test/: DataSpec.hs
boat-core/test/Boat/: InternedSpec.hs
boat-core/test_data/ll_compile/ok/: add.ll  alloca1.expect  alloca1.ll  alloca2.ll  analysis10.ll  analysis5.ll  analysis8.ll  analysis9.expect  analysis9.ll
boat-core/test_data/ll_lexer/ok/: ids.expect  lab.expect
boat-core/test_data/ll_live/: first.expect  first.ll  retry.expect
boat-core/test_data/ll_parser/ok/: decls.ll
boat-prelude/: boat-prelude.cabal
boat-prelude/src/: BoatPrelude.hs
boat-prelude/src/BoatPrelude/: Debug.hs  Effectful.hs  Maybe.hs  Monad.hs  Unsafe.hs  Vector.hs
oat-core/: .ghci  oat-core.cabal
oat-core/app/: Main.hs
oat-core/bench/: Main.hs
oat-core/src/Control/: Embed.hs  FlattenEither.hs  Floodgate.hs  Fuel.hs  OnLeft.hs  Several.hs  Source.hs
oat-core/src/Data/: ASCII.hs  IdGen.hs  IdMap.hs  IdSet.hs  Infinite.hs  IxMap.hs  MapList.hs  NodeMap.hs  Pair.hs  Pos.hs  Range.hs  Rec.hs  SelfField.hs  Some.hs  Source.hs  Source2.hs  Span.hs
oat-core/src/Effectful/Reader/Static/: Optics.hs
oat-core/src/Effectful/State/Static/Local/: Optics.hs
oat-core/src/Oat/: Alloc.hs  Asm.hs  Backend.hs  Cli.hs  Command.hs  Common.hs  Dataflow.hs  Diagnostic.hs  Driver.hs  Error.hs  Fold.hs  Frame.hs  FrameAct.hs  Interned.hs  LL.hs  Main.hs  Opt.hs  PrettyUtil.hs  RegAlloc.hs  Reporter.hs  RunReporter.hs  TH.hs
oat-core/src/Oat/Asm/: AST.hs  Class.hs  Test.hs
oat-core/src/Oat/Backend/: Frame.hs  X86.hs
oat-core/src/Oat/Backend/Asm/: AST.hs
oat-core/src/Oat/Backend/X86/: AST.hs  Codegen.hs  Frame.hs  Munch.hs  Pretty.hs  RegAlloc.hs  X86.hs
oat-core/src/Oat/Dataflow/: Block.hs  Combinators.hs  DGraph.hs  FactGraph.hs  Fuel.hs  Graph.hs  GraphExtra.hs  Label.hs  LabelMap.hs  LabelSet.hs  Node.hs  Pointed.hs  Run.hs  Shape.hs  TreeUtils.hs  Utils.hs
oat-core/src/Oat/Interned/: Internal.hs  ShortByteString.hs  Text.hs
oat-core/src/Oat/LL/: AST.hs  Ast.hs  AstToIr.hs  Cfg.hs  Check.hs  Combine.hs  Dataflow.hs  Dom.hs  Ir.hs  IrToAst.hs  Lexer.x  LexerWrapper.hs  Live.hs  LowerGep.hs  Name.hs  Parser.y  ParserWrapper.hs  Pass.hs  PassManager.hs  ToIr.hs  Token.hs
oat-core/src/Oat/LL/Pass/: ConstProp.hs  Dom.hs  Live.hs  Manager.hs
oat-core/src/Oat/LL/Token/: Kind.hs
oat-core/src/Oat/Optimize/: Block.hs  DGraph.hs  Dataflow.hs  Graph.hs  GraphExtra.hs  Label.hs  LabelMap.hs  LabelSet.hs  TreeUtils.hs
oat-core/src/Oat/Token/: Kind.hs
oat-core/src/Oat/Utils/: CallStack.hs  Families.hs  IO.hs  Impossible.hs  Misc.hs  Monad.hs  OnLeft.hs  Optics.hs  Pretty.hs  Source.hs
oat-core/src/Oat/Wrappers/: Lexer.hs  Parser.hs
oat-core/src/Oat/X86/: AST.hs  Pretty.hs
oat-core/test/: DataSpec.hs  TestDataSpec.hs
oat-core/test/Oat/: InternedSpec.hs
oat-core/test_data/asm_compile/: add  add.s  add_twice  add_twice.s  alloca1  alloca1.s  alloca2  alloca2.s  analysis  analysis.s  analysis10  analysis10.s  analysis2  analysis2.s  analysis3  analysis3.s  analysis5  analysis5.s  analysis7  analysis7.s  analysis8  analysis8.s  analysis9  analysis9.s
oat-core/test_data/ll_compile/ok/: add.ll  add.s  add_twice.expect  add_twice.ll  analysis.ll  analysis10.ll  analysis2.ll  analysis3.ll  analysis5.expect  analysis7.ll  analysis9.ll  gep1.ll
oat-core/test_data/ll_lexer/ok/: add.expect  ids.ll  lab.ll
oat-core/test_data/ll_live/: first.expect  retry.expect  retry.ll
oat-core/test_data/ll_parser/ok/: add.expect  add.ll  decls.expect
oat-prelude/: oat-prelude.cabal
oat-prelude/src/: OatPrelude.hs
oat-prelude/src/OatPrelude/: Debug.hs  Effectful.hs  Maybe.hs  Monad.hs  Unsafe.hs  Vector.hs
runtime/: llruntime.c  llruntime.h  main_wrapper.c  runtime.c  runtime.h  test_runtime.c
src/: Oat.hs
src/Data/: ASCII.hs  IdMap.hs  NodeMap.hs  Pos.hs  Range.hs  Span.hs
src/LLTree/: AST.hs
src/Oat/: Alloc.hs  Backend.hs  Common.hs  Driver.hs  Frame.hs  Frontend.hs  LensOperators.hs  Span.hs  Token.hs
src/Oat/Asm/: AST.hs
src/Oat/Backend/: X86.hs
src/Oat/Interned/: Internal.hs  ShortByteString.hs  Text.hs
src/Oat/LL/: AST.hs  Cfg.hs  Combine.hs  Lexer.x  LexerWrapper.hs  Name.hs  Parser  Parser.y  ParserWrapper.hs  ToTree.hs  Token.hs  Tree.hs
src/Oat/LL/Token/: Kind.hs
src/Oat/LLTree/: AST.hs
src/Oat/Ll/: Syntax.hs
src/Oat/Wrappers/: Lexer.hs  Parser.hs
src/Oat/X86/: AST.hs  Syntax.hs
test/Oat/: InternedSpec.hs
