cabal-version:      3.6
name:               boat-prelude
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  -- yay
  default-extensions:
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    MultiParamTypeClasses,
    ConstraintKinds,
    LambdaCase,
    EmptyCase,
    TupleSections,
    BangPatterns,
    TypeApplications,
    StandaloneDeriving,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    NamedFieldPuns,
    DuplicateRecordFields,
    GeneralizedNewtypeDeriving,
    DataKinds,
    ConstraintKinds,
    TypeApplications,
    KindSignatures,
    StandaloneKindSignatures,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    DeriveLift,
    DeriveTraversable ,
    GeneralizedNewtypeDeriving,
    GADTs,
    PolyKinds,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    FunctionalDependencies,
    ExistentialQuantification,
    TypeOperators,
    OverloadedLabels,
    ImportQualifiedPost,
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-name-shadowing
    -Werror=incomplete-patterns
  build-depends:
    base >= 4.12 && < 5,
    mtl ^>= 2.2.2,
    effectful,
    effectful-core,
    effectful-th,
    containers >=0.5.10.2 && <0.7,
    unordered-containers >=0.2.6 && <0.3,
    text ^>= 2.0,
    vector ^>= 0.12.3.1,
    bytestring >=0.10.4.0 && <0.12,
    hashable ^>= 1.4.0.0,
    optics,
    optics-extra,
    pretty-simple ^>= 4.0.0.0,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    BoatPrelude
    BoatPrelude.Debug
    BoatPrelude.Monad
    BoatPrelude.Unsafe
    BoatPrelude.Maybe
    BoatPrelude.Vector
    BoatPrelude.Effectful
