cabal-version:      3.6
name:               oat-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             brian
maintainer:         littlebubu.shu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  -- yay
  default-language: GHC2021
  default-extensions:
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    MultiParamTypeClasses,
    ConstraintKinds,
    LambdaCase,
    EmptyCase,
    TupleSections,
    BangPatterns,
    TypeApplications,
    StandaloneDeriving,
    OverloadedStrings,
    RankNTypes,
    ScopedTypeVariables,
    NamedFieldPuns,
    DuplicateRecordFields,
    OverloadedRecordDot,
    NoFieldSelectors,
    GeneralizedNewtypeDeriving,
    DataKinds,
    ConstraintKinds,
    TypeApplications,
    KindSignatures,
    StandaloneKindSignatures,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    DeriveLift,
    DeriveTraversable ,
    GeneralizedNewtypeDeriving,
    GADTs,
    PolyKinds,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    FunctionalDependencies,
    ExistentialQuantification,
    TypeOperators,
    OverloadedLabels,
    ImportQualifiedPost,
    ImpredicativeTypes,
  ghc-options:
    -Wall
    -Wredundant-constraints
    -Wno-name-shadowing
    -- until OverloadedRecordUpdate stabilizes
    -Wno-ambiguous-fields
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Werror=incomplete-record-updates
  build-depends:
    base >= 4.12 && <5,
    oat-prelude,
    template-haskell >= 2.16.0.0 && < 2.19.0.0,
    optics,
    optics-extra,
    mtl >=2.2.2 && <2.3,
    effectful,
    effectful-core,
    effectful-optics,
    containers >=0.5.10.2 && <0.7,
    unordered-containers >=0.2.6 && <0.3,
    deepseq >=1.2 && <1.5,
    dlist ^>= 1.0,
    fgl ^>= 5.7.0.3,
    -- text ^>= 1.2.5.0,
    text >=1.2.3.0 && <2.0,
    text-builder ^>= 0.6.6.3,
    -- relude bound
    hashable >= 1.2 && <1.4,
    bytestring >=0.10.4.0 && <0.12,
    filepath ^>= 1.4.2.1,
    directory ^>= 1.3.6.2,
    -- needed for alex
    array ^>= 0.5.4.0,
    vector ^>= 0.12.3.1,
    vector-algorithms ^>= 0.8.0.4,
    primitive ^>= 0.7.3.0,
    foldl ^>= 1.4.12,
    split ^>= 0.2.3.4,
    conduit ^>= 1.3.4.2,
    recursion-schemes ^>= 5.2.2.2,
    prettyprinter ^>= 1.7.1,
    prettyprinter-ansi-terminal ^>= 1.1.3,
    pretty-simple ^>= 4.0.0.0,
    typed-process ^>= 0.2.8.0,
    optparse-applicative ^>= 0.16.1.0,
    parallel ^>= 3.2.2.0,
    file-embed ^>= 0.0.15.0,
    unliftio ^>= 0.2.21.0,
  build-tool-depends:
    hspec-discover:hspec-discover,
    alex:alex,
    happy:happy
  mixins:
    base (Prelude as OldPrelude),
    base hiding (Prelude),
    oat-prelude (OatPrelude as Prelude),
    oat-prelude

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Control.Source
    Control.Fuel
    Control.OnLeft
    Data.Pos
    Data.IdMap
    Data.MapList
    Data.Span
    Data.Range
    Data.Infinite
    Oat
    Oat.Utils.Impossible
    Oat.Utils.Monad
    Oat.Utils.CallStack
    Oat.Utils.Optics
    Oat.Utils.Families
    Oat.Utils.Pretty
    Oat.Driver
    Oat.Reporter
    Oat.RunReporter
    Oat.Error
    Oat.TH
    Oat.Command
    Oat.Main
    Oat.Opt
    -- Oat.Interned
    -- Oat.Interned.Internal
    -- Oat.Interned.Text
    -- Oat.Interned.ShortByteString
    Oat.Wrappers.Lexer
    Oat.Common
    Oat.LL
    Oat.LL.Token
    Oat.LL.Token.Kind
    Oat.LL.Lexer
    Oat.LL.Parser
    Oat.LL.AST
    Oat.LL.Combine
    Oat.LL.LexerWrapper
    Oat.LL.Check
    Oat.LL.ParserWrapper
    Oat.LL.Name
    Oat.Backend.Frame
    Oat.Backend.X86.Frame
    Oat.Backend.X86.Pretty
    Oat.Backend.X86.X86
    Oat.Backend.X86.Munch
    Oat.Backend.X86.Codegen
    Oat.Backend.X86.RegAlloc

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable oatc
  import: common-options, rtsopts
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  build-depends:
    oat-core
  hs-source-dirs: app
  
test-suite oat-core-test
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    DataSpec
    Oat.InternedSpec
  build-depends:
    oat-core,
    hspec ^>= 2.9.4,
    hspec-core ^>= 2.9.4,
    QuickCheck ^>= 2.14.2,
    quickcheck-instances ^>= 0.3.27

benchmark oat-core-bench
  import: common-options, rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    oat-core,
    criterion ^>= 1.5.13.0
